# lambda-aissistaint

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
agent-repo/: README.md  repo.json
agent-repo/skills/paper-gritsqueezer/cli/: pyproject.toml
agent-repo/skills/paper-gritsqueezer/cli/paper_gritsqueezer/: __init__.py  __main__.py  extract.py  grit_squeezer.py  grit_squeezer_instruction_default.txt  llm.py  provenance.py  settings.py
agent-repo/skills/paper-gritsqueezer/cli/tests/: test_grit_squeezer.py
agent-repo/skills/paper-reader-summary/cli/: README.md  pyproject.toml
agent-repo/skills/paper-reader-summary/cli/paper_reader_summary/: __init__.py  __main__.py  abstract.py  chunk_augment.py  debug_viz.py  evidence_extract.py  evidence_index.py  evidence_schema.py  extended_abstract_instruction_default.txt  extract.py  follow_up_questions_instruction_default.txt  knowledge_graph_instruction_default.txt  layout_config.py  layout_detect.py  layout_runtime.py  multimodal_pipeline.py  page_render.py  paperqa_runner.py  paperqa_settings.py  provenance_substrate.py  schema.py  skill_runtime.py  spatial_link.py  structured_summary_instruction_default.txt
agent-repo/skills/paper-reader-summary/cli/tests/: test_abstract.py  test_cli.py  test_extended_abstract.py  test_extract.py  test_extract_answer.py  test_follow_up_parse.py  test_knowledge_graph.py  test_layout_detect.py  test_layout_runtime.py  test_multimodal_pipeline.py  test_page_render.py  test_paperqa_settings.py  test_provenance_substrate.py  test_spatial_link.py
docs/ai-governance/: AUDIT_EVENTS.md  COMPONENT_INTERACTIONS.md  INCIDENT_RESPONSE.md  RISK_REGISTER.md  SYSTEM_INVENTORY.md
docs/handoff/: paper-processing-provenance.md
podman_services/: build_gritsqueezer_runner.sh  build_paperqa2_runner.sh  keycloak_user_admin.sh  podman_infra_bootstrap.sh  rm.sh  test_paperqa2_e2e_mock.sh  test_paperqa2_runner.sh
scripts/: generate-minimal-pdf.mjs  run-paperqa-tests.mjs
server/: app.mjs  index.mjs  litellm-admin-broker.mjs  mockLlmServer.mjs  mockLlmServer.test.mjs
server/clients/: gooseAcp.mjs  index.mjs  litellm.mjs  minio.mjs  openbao.mjs  postgres.mjs
server/config/: runtimeConfig.mjs
server/db/: migrations.mjs  projectRepository.mjs
server/lib/: agentRepo.mjs  auditEvents.mjs  brokerPolicy.mjs  brokerPolicy.test.mjs  llmEndpointPolicy.mjs  llmEndpointPolicy.test.mjs  plannerRepo.mjs  (+22 more)
src/: App.tsx  main.tsx
(+97 files in other folders)
