[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-reader-summary"
version = "0.1.0"
description = "Container-ready one-paper PaperQA2 runner for the AIssistAInt paper reader summary skill."
requires-python = ">=3.11"
dependencies = [
  "paper-qa[local]>=5",
  "paper-qa-pymupdf>=0"
]

[project.scripts]
paper-reader-summary = "paper_reader_summary.__main__:main"
