[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-reader-summary"
version = "0.1.0"
description = "Container-ready one-paper PaperQA2 runner for the AIssistAInt paper reader summary skill."
requires-python = ">=3.11"
dependencies = [
  "paper-qa[local]>=5",
  "paper-qa-pymupdf>=0"
]

[project.scripts]
paper-reader-summary = "paper_reader_summary.__main__:main"

[tool.setuptools.package-data]
paper_reader_summary = [
  "extended_abstract_instruction_default.txt",
  "structured_summary_instruction_default.txt",
  "follow_up_questions_instruction_default.txt",
  "knowledge_graph_instruction_default.txt",
]
